# whispr-local

./: .gitignore  CONTEXT.md  README.md  config.example.toml  pyproject.toml
.claude/skills/agents-md/: SKILL.md
.claude/skills/agents-md/references/: best-practices.md
.claude/skills/commit/: SKILL.md
.claude/skills/to-design/: DESIGN-FORMAT.md  SKILL.md
.claude/skills/to-plan/: PLAN-FORMAT.md  SKILL.md
.cursor/plans/: whispr-local-v1_a1f09c72.plan.md
docs/: ROADMAP.md  v1_prd.md
docs/adr/: 0001-warm-daemon-architecture.md  0002-wayland-injection-via-ydotool.md
docs/design/: v1_design.md
docs/reference/: record_toggle.py  ref.md  transcribe.py
scripts/: export-model.sh  setup-system.sh  setup-user.sh
src/whispr/: cli.py  config.py  daemon.py  indicator.py  injector.py  ipc.py  recorder.py  rewriter.py  screenshot.py  state.py  transcriber.py
systemd/: whispr-indicator.service  whispr.service
tests/: test_config.py  test_daemon.py  test_indicator.py  test_injector.py  test_ipc.py  test_recorder.py  test_rewriter.py  test_state.py  test_transcriber.py
