[project]
name = "whispr-local"
version = "0.1.0"
description = "On-device Whisper dictation for GNOME/Wayland on the Intel NPU"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "numpy",
    "sounddevice",
]

[project.scripts]
whispr = "whispr.cli:main"

[project.optional-dependencies]
# Heavy NPU / OpenVINO stack. Pins resolved in slice-transcriber (design open question #1).
# Kept optional so the pure core + seam tests install and run without the NPU wheel matrix.
npu = [
    "openvino-genai==2026.2.1",
    "optimum-intel==1.25.2",
    "transformers==4.51.3",
    "nncf==2.18.0",
    "onnx==1.18.0",
    # torch is a transitive dep (optimum/transformers) used only at model-export
    # time to load the HF model before OpenVINO conversion — inference is 100% on
    # the NPU via OpenVINO. CPU-only build (avoids ~5 GB of CUDA wheels), pinned
    # < 2.6 because optimum 1.27's ONNX exporter imports `_attention_scale` from
    # torch.onnx.symbolic_opset14, removed in torch 2.6+.
    "torch==2.5.1",
]

[dependency-groups]
dev = [
    "pytest",
]

# Pull torch from PyTorch's CPU-only index so no nvidia-cu12 wheels are dragged in.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whispr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
