[project]
name = "whispr-local"
version = "0.1.0"
description = "On-device Whisper dictation for GNOME/Wayland on the Intel NPU"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "numpy",
    "sounddevice",
    # Dictation-copilot rewrite stage (opt-in via config.rewrite). Cloud OpenAI
    # for now — local on-device Gemma is deferred (OOMs on export/inference on
    # 30 GB RAM; see docs/ROADMAP.md). Lightweight pure-python HTTP client.
    "openai>=2.0",
]

[project.scripts]
whispr = "whispr.cli:main"

[project.optional-dependencies]
# NPU inference runtime — deliberately LEAN. WhisperPipeline reads the exported
# OpenVINO IR directly, so inference needs none of torch/transformers/optimum/nncf
# (those are export-only; see scripts/export-model.sh, which builds its own
# ephemeral venv). Pinned to the 2025.3 line: the Whisper "decoder-with-past" NPU
# path that actually runs on Lunar Lake was REMOVED in OpenVINO 2026.0, so 2026.x
# compiles but throws at generate(). 2025.3 is the last release where NPU Whisper
# works end-to-end. See docs + memory npu-whisper-inference-broken (now fixed).
npu = [
    "openvino-genai==2025.3.0.0",
    "openvino==2025.3.0",
    "openvino-tokenizers==2025.3.0.0",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whispr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
